# WinsockTut

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  ReadMe.md  WinsockTut.sln  build_vs2013.bat  premake4.lua  premake5.lua  readme.md  readme.txt  servers.sln
async_event/: async_event.cpp  async_event.h  async_event.vcxproj.filters  main.cpp
common/: inet_pton.cpp  mutex.h  stdafx.cpp  stdafx.h  thread.cpp  thread.h  utility.cpp  utility.h
examples/chat/: CMakeLists.txt  ChatClient.cpp  ChatClient.h  ChatServer.cpp  ChatServer.h  ChatSession.cpp  ChatSession.h  Protocol.cpp  Protocol.h  main.cpp
examples/echo/: CMakeLists.txt  EchoClient.cpp  EchoClient.h  EchoConn.cpp  EchoConn.h  EchoServer.cpp  EchoServer.h  ReadMe.md  main.cpp
examples/pingpong/: CMakeLists.txt  Client.cpp  Client.h  ReadMe.md  Server.cpp  Server.h  Session.cpp  Session.h  main.cpp
iocp/: iocp.cpp  iocp.vcxproj  iocp.vcxproj.filters  main.cpp  worker.cpp  worker.h
socket/: socket.cpp  socket.vcxproj  socket.vcxproj.filters
src/: AsyncEvent.h  AsyncEventPoller.cpp  AsyncEventPoller.h  AsyncSelect.cpp  AsyncSelect.h  AsyncSelectPoller.cpp  AsyncSelectPoller.h  CompletionPortService.cpp  CompletionPortService.h  EventLoop.cpp  EventLoop.h  IOServiceBase.cpp  IOServiceBase.h  Mask.h  OverlapFd.h  OverlappedIOService.cpp  OverlappedIOService.h  PollEvent.h  PollerBase.cpp  PollerBase.h  Select.cpp  Select.h  SelectPoller.cpp  SelectPoller.h  SocketOpts.cpp  SocketOpts.h  TimerSched.cpp  TimerSched.h  WsaExt.cpp  WsaExt.h  main.cpp
src/Common/: Any.h  Define.h  Dict.h  Error.cpp  Error.h  Hash.cpp  Hash.h  Logging.cpp  Logging.h  Mutex.h  Slice.h  StringPrintf.cpp  StringPrintf.h  StringUtil.cpp  StringUtil.h  Util.cpp  Util.h  WinsockInit.h
src/Proactor/: CompletionPortService.cpp  CompletionPortService.h  IOService.cpp  IOService.h  IOServiceBase.cpp  IOServiceBase.h  Operation.h  OverlapFd.h  OverlappedIOService.cpp  OverlappedIOService.h
src/Reactor/: AsyncEvent.cpp  AsyncEvent.h  AsyncEventPoller.cpp  AsyncEventPoller.h  AsyncSelect.cpp  AsyncSelect.h  AsyncSelectPoller.cpp  AsyncSelectPoller.h  EventLoop.cpp  EventLoop.h  PollEvent.h  Select.cpp  Select.h  SelectPoller.cpp  SelectPoller.h
src/async_event/: AsyncEventChatServer.cpp  AsyncEventChatServer.h  EchoServer.c  EchoServer.h  async_event.c  async_event.cpp  async_event.h  main.c  main.cpp  worker.cpp  worker.h
src/async_select/: AsyncSelect.cpp  AsyncSelectChatServer.cpp  AsyncSelectChatServer.h  CmnDef.h  EchoServer.c  WinApp.cpp  WinApp.h  appdef.h  async_select.c  async_select.cpp  async_select.rc  main.c  resource.h  winamain.cpp  winmain.c  winmain.cpp
src/common/: ChatRoom.cpp  ChatRoom.h  Factory.cpp  Factory.h  Protocol.h  Utils.cpp  Utils.h  avl.c  avl.h  cmndef.h  config.h  inet_ntop.cpp  logging.cpp  logging.h  mutex.h  stdafx.cpp  stdafx.h  thread.cpp  thread.h  utility.c  utility.cpp  utility.h
src/complete_rountine/: CompleteRoutine.cpp  Overlap.cpp  complete_routine.cpp  complete_routine.h  main.cpp
src/complete_routine/: ComRoutineChatServer.cpp  ComRoutineChatServer.h  EchoServer.c  EchoServer.h  complete_routine.c  complete_routine.cpp  complete_routine.h  main.c  main.cpp
src/iocp/: IOCPChatServer.cpp  IOCPChatServer.h  iocp.c  iocp.cpp  iocp.h  main.c  main.cpp  worker.cpp  worker.h
src/iocp_client/: EchoClient.c  clients.c  clients.h  main.c
src/iocp_server/: EchoServer.c  EchoServer.h  main.c  server.c  server.h
src/linux/: select.c  socket.c
src/overlapped/: EchoServer.c  EchoServer.h  OverlapChatServer.cpp  OverlapChatServer.h  main.c  main.cpp  overlap.c  overlap.cpp  overlap.h  overlap_worker.cpp  overlap_worker.h  overlapped.cpp  overlapped.h  worker.cpp  worker.h
src/select/: EchoServer.c  EchoServer.h  SelectChatServer.cpp  SelectChatServer.h  main.c  main.cpp  select.c  select.cpp  select.h
src/socket/: EchoServer.c  EchoServer.h  SocketChatServer.cpp  SocketChatServer.h  main.c  socket.c  socket.cpp  socket.h
tests/: ReadMe.md  test_case.py  test_echo.py  test_tcp_client.py  tests.sln
tests/chat/: chat_client.go  chat_server.go  main.go  protocol.go
tests/client/: client.cpp  client.vcxproj  client.vcxproj.filters
tests/cppclient/: ChatClient.h  main.cpp
tests/echo/: echo.go  echo_client.go  echo_server.go
tests/goclient/: client.go  main.go  message.go  transport.go
tests/mt-clients/: clients.h  mt_client.vcxproj  mt_client.vcxproj.filters
tests/multi_clients/: clients.cpp  clients.h  main.cpp  (+3 more)
(+20 files in other folders)
